sm6250-common: set changelog_url

--- a/overlay/packages/apps/Updater/res/values/strings.xml
+++ b/overlay/packages/apps/Updater/res/values/strings.xml
@@ -18,4 +18,6 @@
     <string name="updater_server_url" translatable="false">https://raw.githubusercontent.com/LeddaZ/posp-custom-builds/frico-release/miatoll/ota.json</string>
 
     <string name="menu_changelog_url" translatable="false">https://github.com/LeddaZ/posp-custom-builds/blob/frico-release/miatoll/changelog.md</string>
+
+    <string name="changelog_url" translatable="false">https://github.com/LeddaZ/posp-custom-builds/blob/frico-release/miatoll/changelog.md</string>
 </resources>
